# The-Hermes-Oracle-Agent-HOA-

./: .env.example  .gitignore  README.md  pyproject.toml
Output/: README.md  final_report.md  polymarket_leaderboard_report.txt
docs/outputs/: Polymarket Scraper 20.txt  ted files found json dumps.txt  venv aman aman MS 7C89.txt
examples/: apify_polymarket_input.json  apify_polymarket_input_fatihtahta.json  sample_event_notes.txt  sample_session_input.json  sample_session_output.template.json
src/cwt_agent/: __init__.py  apify_market_text.py  apify_polymarket.py  cli.py  config.py  digest.py  hermes_chat.py  kalshi_stub.py  logging_setup.py  niches.py  openrouter_client.py  rag_store.py  scoring.py  verify_smoke.py
tests/: test_apify_market_text.py  test_niches.py
